--- a/default/template/html/form/settings.template
+++ b/default/template/html/form/settings.template
@@ -15,7 +15,7 @@
 	<p>
 		<input type=submit name=ui value="Beginner" onclick="if (window.SetInterfaceMode) { return SetInterfaceMode('beginner'); }">
 		<input type=submit name=ui value="Intermediate" onclick="if (window.SetInterfaceMode) { return SetInterfaceMode('intermediate'); }">
-		<input type=submit name=ui value="Expert" class=advanced onclick="if (window.SetInterfaceMode) { return SetInterfaceMode('expert'); }">
+		<input type=submit name=ui value="Advanced" class=advanced onclick="if (window.SetInterfaceMode) { return SetInterfaceMode('expert'); }">
 		<span class=beginner><br>Use these buttons to adjust interface<noscript><b>*</b></noscript></span>
 	</p>
 
