--- a/default/template/html/widget/timestamp.template
+++ b/default/template/html/widget/timestamp.template
@@ -1,3 +1,3 @@
 <!-- timestamp.template -->
-<span epoch=$timestamp title="$timeDate" class=timestamp>$timeDate</span>
+<span epoch=$timestamp title="$timeDate" class=timestamp><nobr>$timeDate</nobr></span>
 <!-- / timestamp.template -->
