Lighttpd config template: add .jpeg extension to mime type defs

--- a/default/template/lighttpd/lighttpd.conf.template
+++ b/default/template/lighttpd/lighttpd.conf.template
@@ -27,6 +27,7 @@ mimetype.assign = (
 	".js" => "text/javascript",
 
 	".jpg"  => "image/jpeg",
+	".jpeg"  => "image/jpeg",
 	".png"  => "image/png",
 	".gif"  => "image/gif",
 	".bmp"  => "image/bmp",
