--- a/default/template/html/form/write/write_zalgo_button.template
+++ b/default/template/html/form/write/write_zalgo_button.template
@@ -1,3 +1,3 @@
 <p>
-	<a onclick="zalgo_textarea('comment');return false;">zalgo</a>
+	<a onclick="if (window.zalgo_textarea) { zalgo_textarea('comment'); return false; }" href=#>zalgo</a>
 </p>
