--- a/default/template/html/item/container/image.template
+++ b/default/template/html/item/container/image.template
@@ -1,3 +1,3 @@
 <!-- image.template -->
-<img src="$imageUrl" lowsrc="$imageSmallUrl" alt="$imageAlt">
+<img style="max-width: 100%" src="$imageUrl" lowsrc="$imageSmallUrl" alt="$imageAlt">
 <!-- / image.template -->
