--- a/default/template/html/item/container/image_with_link.template
+++ b/default/template/html/item/container/image_with_link.template
@@ -1,5 +1,5 @@
 <!-- image_with_link.template -->
 <a href="$permalinkHtml">
-	<img src="$imageUrl" lowsrc="$imageSmallUrl" alt="$imageAlt">
+	<img style="max-width: 100%" src="$imageUrl" lowsrc="$imageSmallUrl" alt="$imageAlt">
 </a>
 <!-- / image_with_link.template -->
