--- a/default/template/html/form/settings.template
+++ b/default/template/html/form/settings.template
@@ -42,21 +42,21 @@
 </fieldset>
 
 <fieldset class=advanced>
-	<legend><b>Timestamp Format</b></legend>
+	<legend><b>Timestamp Format <noscript>*</noscript></b></legend>
 	<p>
 		<label for=optTimestampsSeconds>
 			<input type=radio id=optTimestampsSeconds name=optTimestampsFormat value=seconds onchange="if (window.SaveCheckbox) { SaveCheckbox(this, 'timestamps_format'); }">
-			Relative seconds: -86400<noscript><b>*</b></noscript>
+			Relative seconds: -86400
 		</label>
 		<br>
 		<label for=optTimestampsAdjusted>
 			<input type=radio id=optTimestampsAdjusted name=optTimestampsFormat value=adjusted onchange="if (window.SaveCheckbox) { SaveCheckbox(this, 'timestamps_format'); }">
-			Relative adjusted: 1 day ago<noscript><b>*</b></noscript>
+			Relative adjusted: 1 day ago
 		</label>
 		<br>
 		<label for=optTimestampsExact>
 			<input type=radio id=optTimestampsExact name=optTimestampsFormat value=exact onchange="if (window.SaveCheckbox) { SaveCheckbox(this, 'timestamps_format'); }">
-			Exact value: 1900-01-01 12:00<noscript><b>*</b></noscript>
+			Exact value: 1900-01-01 12:00
 		</label>
 	</p>
 </fieldset>
