--- a/default/template/html/window/titlebar_with_button.template
+++ b/default/template/html/window/titlebar_with_button.template
@@ -3,7 +3,9 @@
 	<td colspan=$contentColumnCount>
 		<script>
 		<!--
-			document.write('<span><a href="#$itemEndAnchor" style="color: $colorTitlebarText;" class=btnSkip title=skip onclick="if (window.CollapseWin) { return CollapseWin(this); } return false;">$btnCloseCaption</a></span>');
+			var gt = unescape('%3E');
+			document.write('<span' + gt + '<a href="#$itemEndAnchor" style="color: $colorTitlebarText;" class=btnSkip title=skip onclick="if (window.CollapseWindow) { return CollapseWindow(this); } return false;"' + gt + '$btnCloseCaption</a' + gt + '</span' + gt + '');
+			// todo make this a .js template and inject only if js enabled
 		// -->
 		</script>
 		<font color="$colorTitlebarText"><b>$windowTitle</b></font>
