--- a/default/template/html/stats-horizontal.template
+++ b/default/template/html/stats-horizontal.template
@@ -1,15 +1,12 @@
 <!-- stats-horizontal.template -->
-
 <p>
-	<span class=beginner>Updated: </span>$lastUpdateTime |
-	<span class=beginner>Operator: </span>$admin
+	<span class=beginner>Operator: </span>$admin |
 	<span class=advanced>
-		|
 		<span class=beginner>Items: </span> $itemsIndexed |
 		<span class=beginner>Files: </span>$filesTotal |
 		<span class=beginner>Authors: </span>$authorCount |
-		<span class=beginner>Version: </span> $versionShort
+		<span class=beginner>Version: </span> $versionShort |
 	</span>
+	<span class=beginner>Updated: </span>$lastUpdateTime
 </p>
-
 <!-- / stats-horizontal.template -->
