--- a/default/template/html/401.template
+++ b/default/template/html/401.template
@@ -8,4 +8,16 @@
 
 <p>If you don't see any additional information, please contact the being who invited you here.</p>
 
+<script>
+<!--
+function doCookie() {
+	document.cookie='test=1;';
+	return false;
+}
+var gt = unescape('%3E');
+document.write('<form name=mc action=/help.html' + gt);
+document.write('<input value="Human Press Button To Enter" type=submit name=sc onclick="return doCookie();"' + gt);
+// -->
+</script>
+
 <!-- 401.template -->
