--- a/default/template/html/form/write/long_message.template
+++ b/default/template/html/form/write/long_message.template
@@ -1,7 +1,3 @@
 <!-- long_message.template -->
-<noscript>
-	<p>
-		If you are submitting a long text, <a href="/write_post.html">please click here</a>.
-	</p>
-</noscript>
+<noscript><p>NoJS: If you are submitting a long text, <a href="/write_post.html">please click here</a>.</p></noscript>
 <!-- / long_message.template -->
