make private key option not-advanced

--- a/default/template/html/form/profile.template
+++ b/default/template/html/form/profile.template
@@ -5,7 +5,7 @@
 		<p>
 			Handle: <b><span id=lblHandle></span></b><br>
 			<span id=lblFingerprint></span><br>
-			<span id=lblSigningIndicator class=advanced></span>
+			<span id=lblSigningIndicator></span>
 		</p>
 		<p>
 			<input
