profile template: do not print "Loading..." where we may not be able to change it later

--- a/default/template/html/form/profile.template
+++ b/default/template/html/form/profile.template
@@ -9,7 +9,7 @@
 				<noscript>*</noscript>
 				<script>
                 <!--
-                document.write('Loading...');
+                document.write('...');
                 // -->
                 </script>
 			</span>
