--- a/default/template/html/item/item.template
+++ b/default/template/html/item/item.template
@@ -1,3 +1,3 @@
 <!-- item/item.template -->
-<p class="$itemClass">$itemText<br></p>
+<p class="txt">$itemText<br></p>
 <!-- / item/item.template -->
