add small improvements to themes

--- a/default/theme/mitbtc/template/html/topmenu2.template
+++ b/default/theme/mitbtc/template/html/topmenu2.template
@@ -2,7 +2,7 @@
 <table cellspacing=0 cellpadding=3 border=0 bgcolor="$colorWindow" class=dialog>
 	<tr bgcolor="$colorTopMenuTitlebar">
 		<td colspan=2>
-			<img alt="MIT Bitcoin Expo" title="MIT Bitcoin Expo" logo src="/logo.gif" height=16 width=16>
+			<img alt="MIT Bitcoin Expo" alt="MIT Bitcoin Club Logo" title="MIT Bitcoin Club Logo" src="/logo.gif" height=16 width=16>
 			<font color="$colorTitlebarText"><b>MIT Bitcoin Expo 2021</b></font>
 			<a href="/etc.html">.</a>
 			<br>
