lighttpd_php_rewrite_all.conf.template add preliminary url_alias_friendly support

--- a/default/template/lighttpd/lighttpd_php_rewrite_all.conf.template
+++ b/default/template/lighttpd/lighttpd_php_rewrite_all.conf.template
@@ -17,6 +17,9 @@ url.rewrite = (
 	# this mode is useful if you require registration
 	
 	"^(.+\.html)\??(.+)?" => "/route.php?path=$1&$2",
-	"^(.+)\/$" => "/route.php?path=$1/index.html"
+	"^(.+)\/$" => "/route.php?path=$1/index.html",
+	"^([0-9a-f]{40})$" => "/route.php?path=$1",
+	"^([0-9a-f]{8})$" => "/route.php?path=$1",
+	#todo admin/php/url_alias_friendly
 )
 
