--- a/default/template/html/form/write/long_message.template
+++ b/default/template/html/form/write/long_message.template
@@ -1,3 +1,8 @@
 <!-- long_message.template -->
-<noscript><p>NoJS: If you are submitting a long text, <a href="/write_post.html">please click here</a>.</p></noscript>
+<noscript>
+	<p>
+		<b>*</b>
+		<a href="/write_post.html">To write a longer text over 2000 characters, click here.</a>
+	</p>
+</noscript>
 <!-- / long_message.template -->
