--- a/default/template/js/js_status.template
+++ b/default/template/js/js_status.template
@@ -1,6 +1,6 @@
 <!-- js_status.template-->
 <span class=advanced id=jsStatus>
-<noscript>NoJS</noscript>
+<noscript>*</noscript>
 <form name=jss id=jss>
 <input type=text name=basic id=jssBasic size=5>
 </form>
