--- a/default/template/html/author_info.template
+++ b/default/template/html/author_info.template
@@ -27,7 +27,7 @@
 		<tr class=advanced><td>description:</td><td>$authorDescription</td></tr>
 		<tr><td>last seen:</td><td>$authorLastSeen</td></tr>
 		<tr class=advanced><td>registration:</td><td><b><tt>$publicKeyHash</tt></b></td></tr>
-		<tr><td>message:</td><td><b><tt>$authorMessageLink</tt></b></td></tr>
+		<tr><td>write:</td><td><b><tt>$authorMessageLink</tt></b></td></tr>
 	</table>
 </font>
 <!-- / author_info.template -->
