--- a/default/template/html/access.template
+++ b/default/template/html/access.template
@@ -1,24 +1,26 @@
 <!-- access.template ; for letting user switch accessibility mode -->
 <form action="/access.html">
-	<p>
-		<label for=lightOn>
-			<input name=btnLightOn value="Accessible" id=lightOn type=submit>
-		</label>
-	</p>
-	<p>
-		<input name=btnLightOff value="Modern" id=lightOff type=submit>
-	</p>
+	<fieldset>
+		<p>
+			<label for=lightOn>
+				<input name=btnLightOn value="Light" id=lightOn type=submit>
+			</label>
+		</p>
+		<p>
+			<input name=btnLightOff value="Modern" id=lightOff type=submit>
+		</p>
 
-	<hr>
+		<hr>
 
-	<p>
-		<input value="Beginner" type=submit name=ui>
-	</p>
-	<p>
-		<input value="Intermediate" type=submit name=ui>
-	</p>
-	<p>
-		<input value="Advanced" type=submit name=ui>
-	</p>
+		<p>
+			<input value="Beginner" type=submit name=ui>
+		</p>
+		<p>
+			<input value="Intermediate" type=submit name=ui>
+		</p>
+		<p>
+			<input value="Advanced" type=submit name=ui>
+		</p>
+	</fieldset>
 </form>
 <!-- / access.template -->
