--- a/default/template/html/window/titlebar_with_button.template
+++ b/default/template/html/window/titlebar_with_button.template
@@ -1,11 +1,24 @@
 <!-- titlebar_with_button.template -->
 <tr bgcolor="$colorTitlebar" class=titlebar>
 	<td colspan=$contentColumnCount>
+		<span>
+			<a
+				href="#$itemEndAnchor"
+				style="color: $colorTitlebarText;"
+				class=btnSkip
+				title=skip
+				onclick="if (window.CollapseWindowFromButton) { return CollapseWindowFromButton(this); } return false;"
+			>
+				$btnCloseCaption
+			</a>
+		</span>
 		<script>
 		<!--
-			var gt = unescape('%3E');
-			document.write('<span' + gt + '<a href="#$itemEndAnchor" style="color: $colorTitlebarText;" class=btnSkip title=skip onclick="if (window.CollapseWindow) { return CollapseWindow(this); } return false;"' + gt + '$btnCloseCaption</a' + gt + '</span' + gt + '');
-			// todo make this a .js template and inject only if js enabled
+			if (0) {
+				var gt = unescape('%3E');
+				document.write('<span' + gt + '<a href="#$itemEndAnchor" style="color: $colorTitlebarText;" class=btnSkip title=skip onclick="if (window.CollapseWindowFromButton) { return CollapseWindowFromButton(this); } return false;"' + gt + '$btnCloseCaption</a' + gt + '</span' + gt + '');
+				// todo make this a .js template and inject only if js enabled
+			}
 		// -->
 		</script>
 		<font color="$colorTitlebarText"><b>$windowTitle</b></font>
